# mylisp

./: CMakeLists.txt  README.md  atomtest.lisp  carcdrtest.lisp  condtest.lisp  constest.lisp  eqtest.lisp  labeltest.lisp  lambdatest.lisp  mylisp.c  quotetest.lisp  stringtest.lisp  test.lisp  wholetest.lisp
include/: core.h  fileio.h  interpreter.h  myhash.h  operation.h  printer.h  reader.h
src/: core.c  fileio.c  interpreter.c  myhash.c  operation.c  printer.c  reader.c
